# nora-novel

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  build.py  docker-compose.yml  main.py  pyproject.toml  run.cmd
.trae/specs/add-session-snapshot/: checklist.md  spec.md  tasks.md
.trae/specs/auto-archive/: checklist.md  spec.md  tasks.md
src/LLM/: interface.py  siliconflow.py
src/core/: core.py  pipeline_tool.py  tools.py  types.py
src/nora_novel/: main.py
src/nora_novel/core/: agent.py  pipeline_tool.py  tools.py  types.py
src/nora_novel/storage/: __init__.py  snapshot.py  wiki.py
src/nora_novel/utils/: __init__.py
src/nora_novel/view/: __init__.py  chat_history.py  chat_input.py  sidebar.py  wiki_manager.py  wiki_manager_simple.py
src/storage/: wiki.py
src/utils/: __init__.py
src/view/: __init__.py
