[project]
name = "nora-novel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.24.0",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nora-novel = "nora_novel.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"